// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should render a tooltip with a custom class name 1`] = `
<span
  className="test-classname"
  data-for="test-tooltip"
  data-tip={true}
  key="test-tooltip"
>
  <div>
    This div should have a tooltip
  </div>
  <ReactTooltip
    effect="solid"
    id="test-tooltip"
    insecure={true}
    place="top"
    resizeHide={true}
    wrapper="div"
  >
    Tooltip message
  </ReactTooltip>
</span>
`;

exports[`<Tooltip /> should render a tooltip with the child element 1`] = `
<span
  data-for="test-tooltip"
  data-tip={true}
  key="test-tooltip"
>
  <div>
    This div should have a tooltip
  </div>
  <ReactTooltip
    effect="solid"
    id="test-tooltip"
    insecure={true}
    place="top"
    resizeHide={true}
    wrapper="div"
  >
    Tooltip message
  </ReactTooltip>
</span>
`;
